web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-continue/output.txt
[SyntaxError]: Illegal continue statement: no surrounding iteration statement. (5,7)
5|      continue;
 |     ^
